# larixite

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  run_local.py  search.html  searchindex.js  xstruct_app.py
.github/workflows/: test-ubuntu.yml
_sources/: index.rst.txt
_static/: bizstyle.js
cif4xas/: webapp.py
cif4xas/templates/: index.html  layout.html
doc/: Makefile  conf.py
doc/_templates/: indexsidebar.html
larixite/: amcsd.py  cif_cluster.py  fdmnes.py  struct2xas.py  structure.py  utils.py  xrd_utils.py
larixite/struct/: __init__.py  xas.py  xas_cif.py  xas_xyz.py
larixite/templates/: fdmnes.tmpl  fdmnes_new.tmpl  fdmnes_xas.tmpl  feff_exafs.tmpl
larixite/webapp/: webapp.py
larixite/webapp/templates/: about.html  index.html  layout.html
notebooks/: workflow_fdmnes.ipynb
tests/: test_cif2feffinp.py  test_fdmnes.py  test_struct.py
tests/structs/: CuO6_D4h.xyz  Fe2.646Ti.354O4_magnetite_Bosi2009_AMCSD4820.cif  Fe3O4_cub_fracOcc_Levy2012_ICSD-183969.cif  K.87H6.13Fe2.79S2O14_jarosite_Basciano2007_AMCSD4438.cif  VO6_Oh.xyz
xstructures/: __init__.py  amcsd.py  amcsd_utils.py  cif_cluster.py  gformat.py  physical_constants.py  utils.py  xrd_utils.py
xstructures/templates/: feff_exafs.tmpl
xstructures/webapp/: webapp.py
xstructures/webapp/static/: style.css
xstructures/webapp/templates/: about.html  index.html  layout.html  upload.html
