[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "xstructures/version.py"
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["xstructures"]

[project]
name = "xstructures"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "convert CIF data to inputs for XAS calculations Feff, FDMNES, etc"
readme = "README.md"
authors = [
     {name = "Matthew Newville", email = "newville@cars.uchicago.edu"}
]
dependencies = [
    "xraydb",
    "sqlalchemy>=2",
    "pymatgen",
    "pyshortcuts",
]

license = {file = "LICENSE"}
keywords = ["X-ray spectroscopy", "rystallography"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    ]

[project.urls]
Homepage = " https://github.com/xraypy/cif4xas"
Documentation = "https://xraypy.github.io/xraylarch/cif4xas"
Tracker = "https://github.com/xraypy/cif4xas/issues"

[project.optional-dependencies]
web = ["flask", "bokeh"]
dev = ["build", "twine"]
all = ["cif4xas[dev,web]"]
