[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "larixite/version.py"
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["larixite"]

[project]
name = "larixite"
dynamic = ["version"]
requires-python = ">= 3.9"
description = "convert CIF data to inputs for XAS calculations Feff, FDMNES, etc"
readme = "README.md"
authors = [
     {name = "Matthew Newville", email = "newville@cars.uchicago.edu"},
     {name = "Mauro Rovezzi", email = "mauro.rovezzi@esrf.fr"}
]

dependencies = [
    "xraydb",
    "sqlalchemy>=2",
    "pymatgen",
    "pyshortcuts",
]

license = {file = "LICENSE"}
keywords = ["X-ray spectroscopy", "Crystallography"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    ]

[project.urls]
Homepage = " https://github.com/xraypy/larixite"
Documentation = "https://xraypy.github.io/larixite"
Tracker = "https://github.com/xraypy/larixite/issues"

[project.optional-dependencies]
web = ["flask"]
test = ["pytest"]
doc = ["sphinx"]
dev = ["build", "twine"]
all = ["larixite[dev,web,test,doc]"]
